update Sign In , Sign Up , JWT
